--- a/vue-server/src/main/resources/application.yml
+++ b/vue-server/src/main/resources/application.yml
@@ -2,6 +2,11 @@ server:
   port: 8080
   servlet:
     context-path: /interest
+  tomcat:
+    max-http-post-size: 1048576
+    max-connections: 3000
+    max-threads: 1000
+  max-http-header-size: 1048576
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
