--- a/vue-server/pom.xml
+++ b/vue-server/pom.xml
@@ -107,6 +107,13 @@
 			<artifactId>okhttp</artifactId>
 			<version>3.8.1</version>
 		</dependency>
+
+		<!--添加fastjson依赖-->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.7</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
