--- a/vue-web/package.json
+++ b/vue-web/package.json
@@ -26,9 +26,6 @@
     "vuex": "^2.2.1"
   },
   "devDependencies": {
-    "vue-quill-editor": "^3.0.4",
-    "quill-image-drop-module": "^1.0.3",
-    "quill-image-resize-module": "^3.0.0",
     "autoprefixer-loader": "^2.0.0",
     "babel": "^6.23.0",
     "babel-core": "^6.23.1",
@@ -43,9 +40,12 @@
     "file-loader": "^0.8.5",
     "html-loader": "^0.3.0",
     "html-webpack-plugin": "^2.28.0",
+    "jquery": "^3.3.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "node-sass": "^4.9.0",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-image-resize-module": "^3.0.0",
     "sass-loader": "^7.0.1",
     "sass-resources-loader": "^1.3.3",
     "style-loader": "^0.13.1",
@@ -53,6 +53,7 @@
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^11.0.0",
+    "vue-quill-editor": "^3.0.4",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.1",
