--- a/vue-server/pom.xml
+++ b/vue-server/pom.xml
@@ -114,6 +114,14 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.7</version>
 		</dependency>
+
+		<!--springboot的自动热部署-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+			<scope>true</scope>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
