--- a/vue-server/pom.xml
+++ b/vue-server/pom.xml
@@ -122,6 +122,12 @@
 			<optional>true</optional>
 			<scope>true</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.2.1</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
