--- a/vue-server/pom.xml
+++ b/vue-server/pom.xml
@@ -128,6 +128,12 @@
 			<artifactId>quartz</artifactId>
 			<version>2.2.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy</artifactId>
+			<version>2.4.5</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
