--- a/vue-server/pom.xml
+++ b/vue-server/pom.xml
@@ -134,6 +134,12 @@
 			<artifactId>groovy</artifactId>
 			<version>2.4.5</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.101tec</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.11</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
