--- a/vue-server/pom.xml
+++ b/vue-server/pom.xml
@@ -140,6 +140,25 @@
 			<artifactId>zkclient</artifactId>
 			<version>0.11</version>
 		</dependency>
+
+		<!-- Objenesis -->
+		<dependency>
+			<groupId>org.objenesis</groupId>
+			<artifactId>objenesis</artifactId>
+			<version>2.1</version>
+		</dependency>
+
+		<!-- Protostuff -->
+		<dependency>
+			<groupId>com.dyuproject.protostuff</groupId>
+			<artifactId>protostuff-core</artifactId>
+			<version>1.0.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.dyuproject.protostuff</groupId>
+			<artifactId>protostuff-runtime</artifactId>
+			<version>1.0.8</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
